--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div>
+    <img src="images/1.jpg">
+
+    <p>
+
+    </p>
+    <h1>fdsfsdf    </h1>
+
+</div>
 
 </body>
 </html>
